still not sending query params across

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -19,6 +19,9 @@
       .nowrap {
         white-space: nowrap;
       }
+      .chromesucks {
+        text-overflow: ellipsis;
+      }
     </style>
 
   </head>
