--- a/server/static/index.html
+++ b/server/static/index.html
@@ -83,7 +83,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.2.2/angular-local-storage.min.js"></script>
-
+    <script src="ng-file-upload.js"></script>
     <script src="main.js"></script>
     <script src="incidentController.js"></script>
   </body>
