cleanup incidentNumber param.  Search box shows search on load

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -92,7 +92,7 @@
             <li>
               <form class="navbar-form navbar-right" ng-submit="go()">
                 <div class="form-group">
-                  <input type="text" id="incident" placeholder="Search" ng-model="incidentNumber" class="form-control">
+                  <input type="text" placeholder="Search" ng-model="searchQuery" class="form-control">
                 </div>
               </form>
             </li>
