--- a/server/static/index.html
+++ b/server/static/index.html
@@ -72,6 +72,10 @@
         30% {opacity:1;transform:scale(1);}
         100% {opacity:1;transform:scale(1);}
       }
+
+      .noteType-Post {
+        background: #dddddd;
+      }
     </style>
 
   </head>
@@ -96,8 +100,8 @@
                 </div>
               </form>
             </li>
-            <li ng-show="isLoggedIn()"><a href="#" class="nav-bar-item">My Incidents</a></li>
-          </ul>
+<!--             <li ng-show="isLoggedIn()"><a href="#" class="nav-bar-item">My Incidents</a></li>
+ -->          </ul>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <div ng-controller="authCtrl" class="pull-right" ng-cloak>
