Formatting of Automatic Posts

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -73,8 +73,12 @@
         100% {opacity:1;transform:scale(1);}
       }
 
-      .noteType-Post {
-        background: #dddddd;
+      .noteType-AutomaticPost {
+        background: #f0fefe;
+      }
+
+      .noteType-ManualPost {
+        background: #fef0fe;
       }
     </style>
 
