--- a/server/static/index.html
+++ b/server/static/index.html
@@ -74,11 +74,15 @@
       }
 
       .noteType-AutomaticPost {
-        background: #f0fefe;
+        background: #fefefe;
       }
 
       .noteType-ManualPost {
         background: #fef0fe;
+      }
+
+      .noteTitleWithBody {
+        border-bottom: 1px solid #aaa;
       }
     </style>
 
